# AI-credit-approval-ml-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHECKLIST.md  DELIVERY_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.bat
.github/workflows/: ci.yml
docker/: Dockerfile
notebooks/: __init__.py  exploration.ipynb
scripts/: __init__.py  test_api.sh  test_api_locally.py  train_model.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
src/models/: __init__.py  credit_model.py
src/utils/: config.py  logger.py
tests/: __init__.py  test_api.py  test_config.py  test_model.py
